apps/wiki/wiki/networkpolicies/traefik-egress-wiki.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: traefik-egress-wiki
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'wiki'
        selector: app == 'wiki'
        ports:
          - 3000
